syntax = "proto3";
option go_package = "github.com/QUDUSKUNLE/microservices/services/organization-service/protogen/golang/organization";

import "google/api/annotations.proto";

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse) {
    option (google.api.http) = {
      post: "/v1/organizations",
      body: "*"
    };
  }
  rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse) {
    option (google.api.http) = {
      get: "/v1/organizations/{id}",
    };
  }

  rpc GetOrganizationByUserID(GetOrganizationByUserIDRequest) returns (GetOrganizationResponse) {
    option (google.api.http) = {
      get: "/v1/organizations/users/{user_id}",
    };
  }
}

message CreateOrganizationRequest {
  string user_id = 1 [json_name = "user_id"];
}

message CreateOrganizationResponse {
  string id = 1 [json_name = "id"];
  string user_id = 2 [json_name = "user_id"];
  string created_at = 3 [json_name = "created_at"];
  string updated_at = 4 [json_name = "updated_at"];
}

message GetOrganizationRequest {
  string id = 1 [json_name = "id"];
}

message GetOrganizationByUserIDRequest {
  string user_id = 1 [json_name = "user_id"];
}

message GetOrganizationResponse {
  string id = 1 [json_name = "id"];
  string user_id = 2 [json_name = "user_id"];
  string created_at = 3 [json_name = "created_at"];
  string updated_at = 4 [json_name = "updated_at"];
}
